# uav_planning_confined_spaces

./: README.md
adaptive_planning/: CMakeLists.txt  package.xml
adaptive_planning/include/adaptive_planning/: PathFinder.hpp  Planner.hpp
adaptive_planning/launch/: test.launch
adaptive_planning/resource/: params.yaml
adaptive_planning/src/: PathFinder.cpp  Planner.cpp  planner_node.cpp
adaptive_planning/srv/: planner_srv.srv
hole_detection/: CMakeLists.txt  package.xml
hole_detection/include/hole_detection/: HoleDetection.hpp  HoleDetectionPackage.hpp
hole_detection/launch/: hole_detection.launch  hole_detection_mynteye.launch
hole_detection/misc/: again.cpp  combo.cpp  curve3d_fit.cpp  example.cpp  image_raw.cpp  pcl_final.cpp  sample.cpp  sensor.cpp  something.cpp  test.cpp
hole_detection/msg/: Hole.msg
hole_detection/resource/: bigHole.txt  bigHoleReal.txt  manhole.txt
hole_detection/scripts/: vision.py
hole_detection/src/: HoleDetection.cpp  HoleDetectionPackage.cpp  hole_detection_package_node.cpp  ransac.cpp  transform_to_world.cpp
octomap/: CMakeLists.txt  package.xml
octomap/launch/: octomap_mapping.launch
rotors/rotors_description/urdf/: component_snippets.xacro  mav_with_vi_sensor_front_down.gazebo
rotors/rotors_gazebo/launch/: mav_exploration.launch  spawn_mav2.launch
rotors/rotors_gazebo/models/basement/: model.config  model.sdf
rotors/rotors_gazebo/models/basement/meshes/: col.dae  help.dae  old_floor.DAE  work.dae
rotors/rotors_gazebo/models/example_model/: model.sdf  model_old.sdf
rotors/rotors_gazebo/models/example_model/materials/scripts/: repeated.material
rotors/rotors_gazebo/models/example_model/meshes/: awnings.DAE  beams_top.DAE  sides.DAE  tank_fronts.DAE
rotors/rotors_gazebo/models/ship/: model.config  model.sdf
rotors/rotors_gazebo/models/ship/meshes/: ship (copy).dae  ship.dae
rotors/rotors_gazebo/worlds/: extra.world  ship_simple.world
task_manager/: CMakeLists.txt  package.xml
task_manager/launch/: tank_world_transform.launch  test.launch
task_manager/resource/: artags.txt  artags2.txt
task_manager/scripts/: sub.py
task_manager/src/: alvar.cpp  ar_listener.cpp  ar_markers_abs_w.cpp  ar_transform.cpp  basement_correction.cpp  correction.cpp  count_invalid.cpp  demo_waypoints.cpp  exploration.cpp  hole_point.cpp  stopper.cpp  test_basement.cpp  tt.cpp  turn.cpp  visualizer.cpp
visual_servoing/: CMakeLists.txt  package.xml
visual_servoing/include/visual_servoing/: VisualServoing.hpp  VisualServoingPackage.hpp
visual_servoing/launch/: visual_servoing.launch  visual_servoing_mynteye.launch
visual_servoing/src/: VisualServoing.cpp  VisualServoingPackage.cpp  testi.cpp  visual_servoing_package_node.cpp
